# Hatchit

./: .gitmodules  index.html  params.json
Assets/Materials/: TestMaterial.json
Assets/Scenes/: testscene.json
Windows/: CMakeLists.txt  HatchitScriptModule.i  config.bat
Windows/HatchitGame/: CMakeLists.txt
Windows/HatchitScript/: CMakeLists.txt
Windows/HatchitScriptModule/: CMakeLists.txt
Windows/HatchitTest/: CMakeLists.txt
